--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     background: #1F2937;
     color: white;
-    font-family: Inter;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .top-part{
